syntax = "proto3";

option go_package = "./";

service Warehouse {
    rpc GetItem(ItemRequest) returns (Item);
    rpc SetItem(Item) returns (OperationResultResponse);
    rpc DeleteItem(Item) returns (OperationResultResponse);
}


message Item {
    string UUID = 1;
    string content = 2;

}
message ItemRequest {
    string UUID = 1;
}
message OperationResultResponse {
    string msg = 1;}